# src/main/kotlin/com.hmlr/api/common/VaultQueryHelper.kt
@@ -79,10 +79,10 @@ abstract class VaultQueryHelperConsumer {
          */
         fun TitleTransferDTO.Companion.buildList(landTitleStateAndInstants: Map<String, List<StateAndInstant<LandTitleState>>>,
                                                  agreementStateAndInstants: Map<String, List<StateAndInstant<LandAgreementState>>>,
+                                                 paymentStateAndInstants: Map<String, List<StateAndInstant<PaymentConfirmationState>>>,
                                                  chargesAndRestrictionsStateAndInstants: Map<String, List<StateAndInstant<ProposedChargesAndRestrictionsState>>>,
                                                  requestIssuanceStateAndInstants: Map<String, List<StateAndInstant<RequestIssuanceState>>>,
-                                                 requestIssuanceNotFailedStateAndInstants: Map<String, List<StateAndInstant<RequestIssuanceState>>>,
-                                                 instructConveyancerStateAndInstants: Map<String, List<StateAndInstant<InstructConveyancerState>>>): List<TitleTransferDTO> {
+                                                 requestIssuanceNotFailedStateAndInstants: Map<String, List<StateAndInstant<RequestIssuanceState>>>): List<TitleTransferDTO> {
             val titleTransferDTOs = mutableListOf<TitleTransferDTO>()
 
             val titleNumbers = setOf<String>()
@@ -91,17 +91,16 @@ abstract class VaultQueryHelperConsumer {
                     .union(chargesAndRestrictionsStateAndInstants.keys)
                     .union(requestIssuanceStateAndInstants.keys)
                     .union(requestIssuanceNotFailedStateAndInstants.keys)
-                    .union(instructConveyancerStateAndInstants.keys)
 
             for (titleNumber in titleNumbers) {
                 titleTransferDTOs.add(TitleTransferDTO.build(
                         titleNumber,
                         landTitleStateAndInstants.getOrDefault(titleNumber, listOf()),
                         agreementStateAndInstants.getOrDefault(titleNumber, listOf()),
+                        paymentStateAndInstants.getOrDefault(titleNumber, listOf()),
                         chargesAndRestrictionsStateAndInstants.getOrDefault(titleNumber, listOf()),
                         requestIssuanceStateAndInstants.getOrDefault(titleNumber, listOf()),
-                        requestIssuanceNotFailedStateAndInstants.getOrDefault(titleNumber, listOf()),
-                        instructConveyancerStateAndInstants.getOrDefault(titleNumber, listOf())
+                        requestIssuanceNotFailedStateAndInstants.getOrDefault(titleNumber, listOf())
                 ))
             }
 
@@ -114,26 +113,26 @@ abstract class VaultQueryHelperConsumer {
         fun TitleTransferDTO.Companion.build(titleNumber: String,
                                              landTitleStateAndInstants: List<StateAndInstant<LandTitleState>>,
                                              agreementStateAndInstants: List<StateAndInstant<LandAgreementState>>,
+                                             paymentStateAndInstants: List<StateAndInstant<PaymentConfirmationState>>,
                                              chargesAndRestrictionsStateAndInstants: List<StateAndInstant<ProposedChargesAndRestrictionsState>>,
                                              requestIssuanceStateAndInstants: List<StateAndInstant<RequestIssuanceState>>,
-                                             requestIssuanceNotFailedStateAndInstants: List<StateAndInstant<RequestIssuanceState>>,
-                                             instructConveyancerStateAndInstants: List<StateAndInstant<InstructConveyancerState>>): TitleTransferDTO {
+                                             requestIssuanceNotFailedStateAndInstants: List<StateAndInstant<RequestIssuanceState>>): TitleTransferDTO {
             //Build state statuses
             val stateStatuses = mutableListOf<Pair<String, StateSummaryDTO>>().apply {
                 addAll(StateSummaryDTO.buildPairs("land_title", landTitleStateAndInstants.map { it to it.state.status.name }))
                 addAll(StateSummaryDTO.buildPairs("sales_agreement", agreementStateAndInstants.map { it to it.state.status.name }))
+                addAll(StateSummaryDTO.buildPairs("payment", paymentStateAndInstants.map { it to it.state.status.name }))
                 addAll(StateSummaryDTO.buildPairs("proposed_charges_and_restrictions", chargesAndRestrictionsStateAndInstants.map { it to it.state.status.name }))
                 addAll(StateSummaryDTO.buildPairs("request_issuance", requestIssuanceStateAndInstants.map { it to it.state.status.name }))
-                addAll(StateSummaryDTO.buildPairs("instruct_conveyancer", instructConveyancerStateAndInstants.map { it to "instructed_conveyancer" }))
             }.toMap()
 
             val landTitleStateAndInstant = landTitleStateAndInstants.firstOrNull()
             val agreementStateAndInstant = agreementStateAndInstants.firstOrNull()
+            val paymentStateAndInstant = paymentStateAndInstants.firstOrNull()
             val chargesAndRestrictionsStateAndInstant = chargesAndRestrictionsStateAndInstants.firstOrNull()
 
             //Build status
             val status: String = when {
-                instructConveyancerStateAndInstants.firstOrNull() != null -> "instructed_conveyancer"
                 run {
                     requestIssuanceNotFailedStateAndInstants.firstOrNull()?.state?.status?.name?.toLowerCase() == "pending"
                 } -> "request_issuance_pending"
@@ -160,11 +159,17 @@ abstract class VaultQueryHelperConsumer {
                     agreementStateAndInstant?.state?.status?.name?.toLowerCase() == "approved"
                 } -> "sales_agreement_approved"
                 run {
+                    paymentStateAndInstant?.state?.status?.name?.toLowerCase() == "confirm_payment_received_in_escrow"
+                } -> "payment_received_in_escrow"
+                run {
                     agreementStateAndInstant?.state?.status?.name?.toLowerCase() == "signed"
                 } -> "sales_agreement_seller_party_signed"
                 run {
                     agreementStateAndInstant?.state?.status?.name?.toLowerCase() == "completed"
                 } -> "sales_agreement_completed"
+                run {
+                    paymentStateAndInstant?.state?.status?.name?.toLowerCase() == "confirm_payment_received_in_escrow"
+                } -> "payment_received_in_escrow"
                 run {
                     landTitleStateAndInstant?.state?.status?.name?.toLowerCase() == "transferred"
                 } -> "land_title_transferred"
@@ -203,7 +208,9 @@ abstract class VaultQueryHelperConsumer {
                             chargesAndRestrictionsStateAndInstant.state.restrictions.map { it.toDTO() }
                     ),
                     sales_agreement = if (agreementStateAndInstant == null || agreementStateAndInstant.state.status.name.toLowerCase() == "transferred") null else {
-                        agreementStateAndInstant.state.toDTO(agreementStateAndInstant.instant?.toLocalDateTime())
+                        val referencedPaymentState = paymentStateAndInstants.first { it.state.landAgreementStateLinearId == agreementStateAndInstant.state.linearId.toString() }
+                        val paymentSettler = referencedPaymentState.state.settlingParty
+                        agreementStateAndInstant.state.toDTO(paymentSettler, agreementStateAndInstant.instant?.toLocalDateTime())
                     },
                     states = stateStatuses,
                     status = status
@@ -216,14 +223,12 @@ abstract class VaultQueryHelperConsumer {
         fun TitleTransferDTO.Companion.build(vaultQueryHelperConsumer: VaultQueryHelperConsumer, titleNumber: String): TitleTransferDTO? {
             //Get states and instants
             val landTitleStateAndInstants: List<StateAndInstant<LandTitleState>> = vaultQueryHelperConsumer.getStatesBy { it.state.data.titleID == titleNumber }
-            val instructConveyancerStateAndInstants: List<StateAndInstant<InstructConveyancerState>> = vaultQueryHelperConsumer.getStatesBy { it.state.data.titleID == titleNumber }
             val requestIssuanceStateAndInstants: List<StateAndInstant<RequestIssuanceState>> = vaultQueryHelperConsumer.getStatesBy { it.state.data.titleID == titleNumber }
 
             //Get title number
             val stateTitleNumber = when {
                 landTitleStateAndInstants.firstOrNull() != null -> landTitleStateAndInstants.first().state.titleID
                 requestIssuanceStateAndInstants.firstOrNull() != null -> requestIssuanceStateAndInstants.first().state.titleID
-                instructConveyancerStateAndInstants.firstOrNull() != null -> instructConveyancerStateAndInstants.first().state.titleID
                 else -> null
             }
 
@@ -232,6 +237,7 @@ abstract class VaultQueryHelperConsumer {
 
             //Get more states and instants
             val agreementStateAndInstants: List<StateAndInstant<LandAgreementState>> = vaultQueryHelperConsumer.getStatesBy { it.state.data.titleID == titleNumber }
+            val paymentStateAndInstants: List<StateAndInstant<PaymentConfirmationState>> = vaultQueryHelperConsumer.getStatesBy { it.state.data.titleID == titleNumber }
             val chargesAndRestrictionsStateAndInstants: List<StateAndInstant<ProposedChargesAndRestrictionsState>> = vaultQueryHelperConsumer.getStatesBy { it.state.data.titleID == titleNumber }
             val requestIssuanceNotFailedStateAndInstants: List<StateAndInstant<RequestIssuanceState>> = vaultQueryHelperConsumer.getStatesBy {
                 val hasFailed = it.state.data.status == RequestIssuanceStatus.FAILED || it.state.data.status == RequestIssuanceStatus.TITLE_ALREADY_ISSUED
@@ -242,10 +248,10 @@ abstract class VaultQueryHelperConsumer {
                     stateTitleNumber,
                     landTitleStateAndInstants,
                     agreementStateAndInstants,
+                    paymentStateAndInstants,
                     chargesAndRestrictionsStateAndInstants,
                     requestIssuanceStateAndInstants,
-                    requestIssuanceNotFailedStateAndInstants,
-                    instructConveyancerStateAndInstants
+                    requestIssuanceNotFailedStateAndInstants
             )
         }
 
@@ -255,7 +261,6 @@ abstract class VaultQueryHelperConsumer {
         fun TitleTransferDTO.Companion.buildList(vaultQueryHelperConsumer: VaultQueryHelperConsumer): List<TitleTransferDTO> {
             //Get states and instants
             val landTitleStateAndInstantsFilterPair = vaultQueryHelperConsumer.getStatesMap<LandTitleState> { it.state.titleID }
-            val instructConveyancerStateAndInstantsFilterPair = vaultQueryHelperConsumer.getStatesMap<InstructConveyancerState> { it.state.titleID }
             val requestIssuanceStateAndInstantsFilterPair = vaultQueryHelperConsumer.getStatesMap<RequestIssuanceState> { it.state.titleID }
             val requestIssuanceNotFailedStateAndInstantsFilterPair = vaultQueryHelperConsumer.getStatesMap<RequestIssuanceState>(
                     {
@@ -265,15 +270,16 @@ abstract class VaultQueryHelperConsumer {
                     { it.state.titleID }
             )
             val agreementStateAndInstantsFilterPair = vaultQueryHelperConsumer.getStatesMap<LandAgreementState> { it.state.titleID }
+            val paymentStateAndInstantsFilterPair = vaultQueryHelperConsumer.getStatesMap<PaymentConfirmationState> { it.state.titleID }
             val chargesAndRestrictionsStateAndInstantsFilterPair = vaultQueryHelperConsumer.getStatesMap<ProposedChargesAndRestrictionsState> { it.state.titleID }
 
             return TitleTransferDTO.buildList(
                     landTitleStateAndInstantsFilterPair,
                     agreementStateAndInstantsFilterPair,
+                    paymentStateAndInstantsFilterPair,
                     chargesAndRestrictionsStateAndInstantsFilterPair,
                     requestIssuanceStateAndInstantsFilterPair,
-                    requestIssuanceNotFailedStateAndInstantsFilterPair,
-                    instructConveyancerStateAndInstantsFilterPair
+                    requestIssuanceNotFailedStateAndInstantsFilterPair
             )
         }
 
